# Quiz_app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: clients.py  config.py  main.py  models.py  requirements.txt
backend/generation/: llm.py  quiz.py
backend/ingestion/: chunker.py  parser.py  store.py
backend/retrieval/: search.py
frontend/: app.py  requirements.txt
frontend/.streamlit/: config.toml
